.labs/Local-Kubernetes/ml-pipeline/manifests/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  type: ClusterIP
  selector:
    app: kibana
  ports:
    - name: http
      port: 5601
      targetPort: 5601
